fixed bug with visibility of button (header)

--- a/style.css
+++ b/style.css
@@ -40,7 +40,9 @@ header.master_page {
 .main-page-close {
   display: none;
 }
-
+.eCxtrN {
+  visibility: hidden;
+}
 main.master_page > section div img {
   width: 95%;
 }
@@ -153,7 +155,7 @@ div.nav_bar > ol {
 }
 a.navigate:hover {
   color: white;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   font-weight: 1000;
 }
 a.resume {
@@ -5433,6 +5435,21 @@ section#experience div.imageRight {
     .main-page-close img {
       width: 35px;
       height: 35px;
+    }
+    h2.master_page {
+      font-size: 1.2rem;
+    }
+    h4.master_page {
+      font-size: 0.8rem;
+    }
+    h5.master_page {
+      font-size: 0.7rem;
+    }
+    .eXnPVF .title {
+      font-size: clamp(20px, 5vw, 30px);
+    }
+    main.master_page > section {
+      padding-top: 20%;
     }
   }
 }
